Added stylesheet and first custom marker

--- a/index.html
+++ b/index.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <style>
-    .wrapper {
-      margin:0 auto;
-      width: 1080px;
-    }
-
-       #map {
-        height: 500px;
-        width: 100%;
-       }
-    </style>
-  </head>
-  <body>
-    <h3>My Google Maps Demo</h3>
-    <section class="wrapper">
-    <div id="map"></div>
-    </section>
-    <script src="js/map.js"></script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBi9wOa3i_s5ISPme37zn1DQihIQMw86WQ&callback=initMap">
-    </script>
-  </body>
+    <head>
+        <title>MX track info - Motocross bane info</title>
+        <meta name="description" content="Free Web tutorials">
+        <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+        <meta name="author" content="John Doe">
+        <meta name="viewport" content="width=device-width">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    </head>
+    <body>
+        <h3 class="desktop-">My Google Maps Demo</h3>
+        <section class="wrapper">
+        <div id="map"></div>
+        </section>
+        <script src="js/map.js"></script>
+        <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBi9wOa3i_s5ISPme37zn1DQihIQMw86WQ&callback=initMap">
+        </script>
+    </body>
 </html>
