Added analytics and all dmcu motocross clubs

--- a/index.html
+++ b/index.html
@@ -2,18 +2,41 @@
 <html>
     <head>
         <title>MX track info - Motocross bane info</title>
+        <meta charset="UTF-8">
         <meta name="description" content="Free Web tutorials">
         <meta name="keywords" content="HTML,CSS,XML,JavaScript">
         <meta name="author" content="John Doe">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     </head>
     <body>
-        <h3 class="desktop-">My Google Maps Demo</h3>
         <section class="wrapper">
-        <div id="map"></div>
+            <header class="top-bar">
+                <h3 class="">MX Track info</h3>
+                <div class="dmcu-filter">dmcu</div>
+                <div class="dmu-filter">dmc</div>
+            </header>
+
+            <div id="map"></div>
+
+            <footer>
+                <section class="footer-column">
+                    <h3></h3>
+                </section>
+                <section class="footer-column">
+                    <h3></h3>
+                </section>
+                <section class="footer-column">
+                    <h3></h3>
+                </section>
+                <section class="copyright">
+                    © Fennefoss Design - 2017
+                </section>
+            </footer>
         </section>
+        <script src="js/analytics.js"></script>
         <script src="js/map.js"></script>
         <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBi9wOa3i_s5ISPme37zn1DQihIQMw86WQ&callback=initMap">
